# INS_GNSS_KF

./: .gitignore  CMakeLists.txt  README.md  map.html  map_first_try.html
docs/: kf_math.md
include/: bins_algoritm.hpp  config.hpp  gnss_parser.hpp  imu_parser.hpp  kalman_filter.hpp  logger.hpp
scripts/: calculations.py  calibration.py  calibration_Q.py  calibration_bias_and_coef.py  main.py  plots.py  utils.py
src/: bins_algoritm.cpp  gnss_parser.cpp  imu_parser.cpp  kalman_filter.cpp  logger.cpp  main.cpp
